--- a/app.json
+++ b/app.json
@@ -1,8 +1,8 @@
 {
-    "name": "Aquabot",
+    "name": "🎭🇱🇰 𝙰𝙻𝙿𝙷𝙰 🇱🇰🎭 WhatsApp User Bot v5.0.1",
     "description": "AQUABOT  - Makes it easy and fun to use Whatsapp.",
-    "logo": "https://i.ibb.co/LhyDWxR/aquabot.jpg",
-    "keywords": ["whatsapp", "userbot", "aqua", "WhatsAsena", "bot", "api", "ai"],
+    "logo": "https://telegra.ph/file/cd6032c65c27e0510ddad.jp",
+    "keywords": ["whatsapp", "userbot","Achi Bro lk | PG", "ALPHA", "WhatsAsena", "bot", "api", "ai"],
     "repository": "https://github.com/iamMagma/ptsp",
     "website":   "https://aquabot.ga/",
     "success_url": "https://sanuw-api.herokuapp.com/",
@@ -35,7 +35,7 @@
 	 "DEPLOYER": {
 			"description": "ඔබගේ නම හෝ කැමති නමක් යොදන්න",
 			"required": false,
-			"value": "AQUA-USER"
+			"value": "ALPHA-USER"
 	},   
 	"SEND_READ": {
 			"description": "බොට් මැසේජ් සීන් කරන්න අවශ්‍යනම් true ලෙසද අවශ්‍ය නොවේ නම් false ලෙසද තබන්න.",
@@ -45,12 +45,12 @@
 	"C_EMOJI": {
 			"description": "එය ඔබගේ menu එකෙහි විධානයට පෙර ඇති emoji  වෙනස් කරයි...ඔබ කැමති emoji යක් යොදන්න.",
 			"required": false,
-			"value": "🐙"
+			"value": "🎭"
 	},    
 	"D_EMOJI": {
 			"description": "එය ඔබගේ menu එකෙහි  විස්තරයට පෙර ඇති emoji  වෙනස් කරයි...ඔබ කැමති emoji යක් යොදන්න.",
 			"required": false,
-			"value": "🌀"	
+			"value": "🇱🇰"	
 	},
 	"DETAILS": {
 			"description": "සිංදු ,වීඩියෝ ,පොටෝ එනකොට ඒවගෙ details එන්න ඕනෙ නම් true ලෙසද ඕනෙ නැත්තන් false ලෙසද තබන්න.",
@@ -144,7 +144,7 @@
         "ALIVE_LOGO": {
             "description": "Alive message පින්තූරය වෙනස් කිරීම සඳහා ඔබගේ image link පහත සඳහන් කරන්න. (ඔබට අවශ්‍ය පින්තුරය https://imgbb.com වෙබ්සයිට් හි upload කර එම ලින්ක් මෙහි යොදන්න.)",
             "required": true,
-            "value": "https://i.ibb.co/LhyDWxR/aquabot.jpg"
+            "value": "https://i.ibb.co/dQ7yzfR/Whats-App-Image-2022-01-28-at-11-47-11-AM.jpg"
         },
 	"BAN_MESSAGE": {
 			"description": "බොට් හරහා කාවහරි ගෲප් එකකින් රිමූ කරද්දි එන්න ඕනෙ මැසේජ් එක",
@@ -184,13 +184,13 @@
        "CAPTION": {
                         "description": "caption එකට දාන්න ඕන මැසේජ් එක ",
                         "required": false,
-                        "value": "© 𝙶𝙴𝙽𝙴𝚁𝙰𝚃𝙴𝙳 𝙱𝚈 𝙰𝚀𝚄𝙰 ²⁰²²"
+                        "value": "© 𝙶𝙴𝙽𝙴𝚁𝙰𝚃𝙴𝙳 𝙱𝚈 🎭🇱🇰𝙰𝙻𝙿𝙷𝙰🇱🇰🎭 ²⁰²²"
        },   
 	    
      "FOOTER": {
                         "description": "Footer text එකට දාන්න ඕන මැසේජ් එක ",
                         "required": false,
-                        "value": "𝙿𝙾𝚆𝙴𝚁𝙴𝙳 𝙱𝚈 𝙰𝚀𝚄𝙰𝙱𝙾𝚃 ²⁰²²"
+                        "value": "𝙿𝙾𝚆𝙴𝚁𝙴𝙳 𝙱𝚈 🎭🇱🇰𝙰𝙻𝙿𝙷𝙰🇱🇰🎭"
        },   
       "COFFEEHOUSE_": {
             "description": "එය අත්හරින්න. අපි ඔබට මෙය ලබා දෙනවා.",
